--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# ignore the whole folder
+src/css/*.*
 
-src/css
+# but don't ignore this specific file inside it
+!src/css/app.css
+!src/css/app.css.map
+!src/css/app.min.css
+!src/css/app.min.css.map
